--- a/webclient/src/styles.css
+++ b/webclient/src/styles.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:where(.dark, .dark *));
